# simple-todo-list-api-web

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/database/: engine.py
src/dependencies/: lifespan.py  session.py  task.py  user.py
src/models/: task.py  user.py
src/repositories/: base.py
src/repositories/task/: sqlalchemy.py
src/repositories/user/: sqlalchemy.py
src/routes/: task.py  user.py
src/schemas/: auth.py  task.py  user.py
src/service/: task.py  user.py
src/utils/: hash.py  jwt_env.py  token.py
